3.6.0-beta7 - 23 November 2021

* 10808: Misc property lookup optimizations
* 10806: Improved performance of Map "_isVisible" properties
* 10803: Speeds Game Refresh and general performance in modules with many
    maps defined
* 10800: Preference to turn off automatic update notification
* 10793: Fix NPE: Always cache SetupStack configurer bounding box
* 10784: LOS thread thickness is adjustable
* 10777: Fix duplicate DragShadow for Cargo at zoom < 100%
* 10774: Validation messages when Movement Trail traits placed inside of
    Rotate, Pivot, or Mat Cargo traits
* 10773: Fixed bad description for Movement Trail trait
* 10772: Allow module images to have English localizations
* 10764: Server text improvements
* 10762: Add sumProperties() function for use in Beanshell expressions in
    the Mouse-over Stack Viewer
* 10761: Toolbar buttons can be disabled when a specified Global Property
    is true
* 10760: Correctly initialize local-only properties in Movement Trails
* 10757: Prevent undo of Refresh Counters from causing contents of Decks to
    disappear, and deleting units from inside a Deck could not be undone
* 10755: When switching sides, close private hands/windows that we no longer
    have access to
* 10753: Clarify documentation of sum(PropertyName) in Mouseover
* 10752: Fixed bug where Deck 'count expressions' wouldn't count beanshell,
    only old-style (now will count either)
* 10751: Better description of Player Hand
* 10750: Place Marker should put stacking markers in a stack (even if parent
    marker is non-stacking)
* 10749: Move Camera Button can also change Zoom
* 10007: Ctrl/Cmd to select for Does Not Stack
*  9366: Inventory window allows 3-level zoom
*  9219: Expression Builder button added for Message Format fields & Report
    Trait. Sum() and Count() now available in the Report trait's field
*  9209: Added GetString() and .toString() to Beanshell to force the return
    of property values as Strings