@@ -17,11 +17,12 @@
   ],
   "changes": [
     {
-      "in": "3.6.0",
+      "in": "3.6.0-beta7",
       "since": "3.6.0-beta6",
       "new_features": [
       ],
       "bug_fixes": [
+        { "num": 10810, "desc": "Protect against no available trait being selected in PieceDefiner" },
         { "num": 10793, "desc": "Fix NPE: Always cache SetupStack configurer bounding box" },
         { "num": 10777, "desc": "Fix duplicate DragShadow for Cargo at zoom < 100%" },
         { "num": 10773, "desc": "Fixed bad description for Movement Trail trait" },
@@ -30,6 +31,8 @@
         { "num": 10752, "desc": "Fixed bug where Deck 'count expressions' wouldn't count beanshell, only old-style (now will count either)" }
       ],
       "other_improvements": [
+        { "num": 10812, "desc": "Optimize Single Property Beanshell expressions" },
+        { "num": 10811, "desc": "Optimization: Check for possible keystrokes in Restrict Commands before evaluating match epression" },
         { "num": 10808, "desc": "Misc property lookup optimizations" },
         { "num": 10806, "desc": "Improved performance of Map \"_isVisible\" properties" },
         { "num": 10803, "desc": "Speeds Game Refresh and general performance in modules with many maps defined" },
